--- a/contents/编码技巧&&心得/源码阅读心得-20190211/源码阅读心得.md
+++ b/contents/编码技巧&&心得/源码阅读心得-20190211/源码阅读心得.md
@@ -1,3 +1,6 @@
+# 源码阅读技巧
+大型开源仓库轻则上万行代码，肯定无法一下子了解熟悉所有的功能。每次需要去了解一个新功能时，先把所有类和函数全部折叠起来，了解一下它的大致“形状”，然后再依次展开感兴趣的函数，仔细斟酌。
+
 # 源码阅读心得
 # 一、看源码的正确方法
 改页面、看源码一定记得debugger,在debugger的过程一个个函数跳进去看，然后看每跳过一个每个函数对应页面效果的变化，这样才能快速看懂不同函数的功能。
