--- a/contents/前后端联调/前后端分离/前后端分离.md
+++ b/contents/前后端联调/前后端分离/前后端分离.md
@@ -1,36 +1,44 @@
 # 前言：分离模式
 
 # 为什么要分离？
-[Web的研发模式演变](https://github.com/lifesinger/blog/issues/184)
-不能“为了分离而分离”，而应该“为了真正理解web开发、为了更好完成需求而分离”。
+
+[Web 的研发模式演变](https://github.com/lifesinger/blog/issues/184)
+不能“为了分离而分离”，而应该“为了真正理解 web 开发、为了更好完成需求而分离”。
 
 # 前后端分离的误区？
+
 ## 1、前端人员配备是否充足？
-　　由于所在公司以往项目采用传统开发风格，即以后端MVC为主的开发模式，前端人员仅仅提供静态html页面，其余工作皆由后端开发人员完成。采用前后端分离模式可以减后台负担，加快研发效率，前提是前端能做好的话。以往只需要提供静态页面的前端人员，在前后端分离模式中要负责项目的`view+controller`部分，除了静态页面，还需要负责页面的所有交互代码、以及nodejs与视图层以及后端API的交互工作。
+
+由于所在公司以往项目采用传统开发风格，即以后端 MVC 为主的开发模式，前端人员仅仅提供静态 html 页面，其余工作皆由后端开发人员完成。采用前后端分离模式可以减后台负担，加快研发效率，前提是前端能做好的话。以往只需要提供静态页面的前端人员，在前后端分离模式中要负责项目的`view+controller`部分，除了静态页面，还需要负责页面的所有交互代码、以及 nodejs 与视图层以及后端 API 的交互工作。
 
 ## 2、前后端职责分配？
-职责分配和细节处理需要相应文档规定，缓存机制、图片上传下载、数据校验、语言国际化等要出具相应信息。
-nodejs能负责很多事，除了复杂业务逻辑处理和数据操作由Java负责，大量工作完全可以在nodejs层处理。
 
-## 3、后端API是否Restful风格？
-Restful风格的API应该是前后端分离的最佳实践。ResultFul推荐每个URL能操作具体的资源,且能准确描述服务器对资源的处理动作，通常服务器对资源支持get/post/put/delete/等，用来实现资源的增删改查。
+职责分配和细节处理需要相应文档规定，缓存机制、图片上传下载、数据校验、语言国际化等要出具相应信息。
+nodejs 能负责很多事，除了复杂业务逻辑处理和数据操作由 Java 负责，大量工作完全可以在 nodejs 层处理。
+
+## 3、后端 API 是否 Restful 风格？
+
+Restful 风格的 API 应该是前后端分离的最佳实践。ResultFul 推荐每个 URL 能操作具体的资源,且能准确描述服务器对资源的处理动作，通常服务器对资源支持 get/post/put/delete/等，用来实现资源的增删改查。
 
 ## 4、前后端协作模式？
-前后端分离后，无论是API接口的对接还是测试工作，都涉及到前后端人员的沟通。
-例如：当后端 API 没有编写完成时，前端无法进行调试，这就导致了前端会被后端阻塞的情况。这种互相等待的模式需要改进，Mock Server可能可以解决一些问题。
+
+前后端分离后，无论是 API 接口的对接还是测试工作，都涉及到前后端人员的沟通。
+例如：当后端 API 没有编写完成时，前端无法进行调试，这就导致了前端会被后端阻塞的情况。这种互相等待的模式需要改进，Mock Server 可能可以解决一些问题。
 
 ## 如何前后端分离？
+
 后端专注于：后端控制层（Restful API） & 服务层 & 数据访问层；
 前端专注于：前端控制层（Nodejs） & 视图层
 1、项目设计阶段
-前后端架构负责人将项目整体进行分析，讨论并确定API风格、职责分配、开发协助模式，确定人员配备；设计确定后，前后端人员共同制定开发接口。
+前后端架构负责人将项目整体进行分析，讨论并确定 API 风格、职责分配、开发协助模式，确定人员配备；设计确定后，前后端人员共同制定开发接口。
 2、项目开发阶段
-前后端分离是各自分工，协同敏捷开发，后端提供Restful API，并给出详细文档说明，前端人员进行页面渲染前台的任务是发送API请(GET,PUT,POST,DELETE等)获取数据（json，xml）后渲染页面。
+前后端分离是各自分工，协同敏捷开发，后端提供 Restful API，并给出详细文档说明，前端人员进行页面渲染前台的任务是发送 API 请(GET,PUT,POST,DELETE 等)获取数据（json，xml）后渲染页面。
 3、项目测试阶段
-API完成之前，前端人员会使用mock server进行模拟测试，后端人员采用junit进行API单元测试，不用互相等待；API完成之后，前后端再对接测试一下就可以了，当然并不是所有的接口都可以提前定义，有一些是在开发过程中进行调整的。
+API 完成之前，前端人员会使用 mock server 进行模拟测试，后端人员采用 junit 进行 API 单元测试，不用互相等待；API 完成之后，前后端再对接测试一下就可以了，当然并不是所有的接口都可以提前定义，有一些是在开发过程中进行调整
 4、项目部署阶段
-利用nginx 做反向代理，即Java + nodejs + nginx 方式进行。
+利用 nginx 做反向代理，即 Java + nodejs + nginx 方式进行。
 
 # 总结
-　　从经典的JSP+Servlet+JavaBean的MVC时代，到SSM（Spring + SpringMVC + Mybatis）和SSH（Spring + Struts + Hibernate）的Java 框架时代，再到前端框架（KnockoutJS、AngularJS、vueJS、ReactJS）为主的MV*时代，然后是Nodejs引领的全栈时代，技术和架构一直都在进步。
-　　“基于NodeJS的全栈式开发”模式很让人兴奋，但是把基于Node的全栈开发变成一个稳定，让大家都能接受的东西还有很多路要走。创新之路不会止步，无论是前后端分离模式还是其他模式，都是为了更方便得解决需求。
+
+从经典的 JSP+Servlet+JavaBean 的 MVC 时代，到 SSM（Spring + SpringMVC + Mybatis）和 SSH（Spring + Struts + Hibernate）的 Java 框架时代，再到前端框架（KnockoutJS、AngularJS、vueJS、ReactJS）为主的 MV\*时代，然后是 Nodejs 引领的全栈时代，技术和架构一直都在进步。
+　　“基于 NodeJS 的全栈式开发”模式很让人兴奋，但是把基于 Node 的全栈开发变成一个稳定，让大家都能接受的东西还有很多路要走。创新之路不会止步，无论是前后端分离模式还是其他模式，都是为了更方便得解决需求。
